k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: java-application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app-container
        image: us-central1-docker.pkg.dev/tensile-will-419716/images/java_app:085629e2d86a037dde0da754d133ee0a3e21d66d
        ports:
        - containerPort: 8000
