k8s/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-lb-service
spec:
  type: LoadBalancer
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
