k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-cip-service
  namespace: java-application
spec:
  type: ClusterIP
  # Uncomment the below line to create a Headless Service
  # clusterIP: None
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
